--- a/Vidly/Views/Customer/Details.cshtml
+++ b/Vidly/Views/Customer/Details.cshtml
@@ -6,3 +6,12 @@
 
 <h2>Details</h2>
 @Model.Name
+<ul>
+    <li> @Model.MembershipType.Name</li> 
+    @if (Model.Birthdate.HasValue)
+    {
+        <li>@Model.Birthdate.Value.ToShortDateString()</li>
+    }
+</ul>
+
+
