--- a/Vidly/Views/Customer/Index.cshtml
+++ b/Vidly/Views/Customer/Index.cshtml
@@ -12,9 +12,25 @@
 else
 {
 
+    <table class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <td>Customers</td>
+                <td>Discount Rate</td>
+                <td>Discount Name</td>
+            </tr>
+        </thead>
+        <tbody>
+            
 
-foreach (var cust in Model)
-{
-    @Html.ActionLink(cust.Name, "Details", "Customer",new { id = cust.Id },null)<br />
-}
+            @foreach (var cust in Model)
+            {
+            <tr>
+                <td>@Html.ActionLink(cust.Name, "Details", "Customer", new { id = cust.Id }, null)</td>
+                <td>@cust.MembershipType.DiscountRate%</td>
+                <td>@cust.MembershipType.Name</td>
+            </tr>
+            }
+        </tbody>
+    </table>
 }
