--- a/Vidly/Views/Customer/Index.cshtml
+++ b/Vidly/Views/Customer/Index.cshtml
@@ -11,7 +11,7 @@
 }
 else
 {
-
+    
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
@@ -26,7 +26,7 @@ else
             @foreach (var cust in Model)
             {
             <tr>
-                <td>@Html.ActionLink(cust.Name, "Details", "Customer", new { id = cust.Id }, null)</td>
+                <td>@Html.ActionLink(cust.Name, "Edit", "Customer", new { id = cust.Id }, null)</td>
                 <td>@cust.MembershipType.DiscountRate%</td>
                 <td>@cust.MembershipType.Name</td>
             </tr>
